# MLTemplate

./: .gitignore  CHANGELOG.md  README.md  README.norg  pyproject.toml  tox.ini
.github/workflows/: release-please.yml
.vim/: local.lua
configs/: default.yaml
mltemplate/: trigger.py
mltemplate/libs/: evaluator.py  lr_scheduler.py  network.py  network_wrapper.py  optimizer.py  recorder.py  renderer.py  trainer.py
mltemplate/libs/loader/: collator.py  dataset_loader.py  loader_base.py  samplers.py
mltemplate/utils/: data_utils.py  manager.py  net_utils.py  rich_logger.py
utils/: dataset_util.py  manager.py
